src/test/ui/generic-associated-types/gat-trait-path-missing-lifetime.stderr
warning: the feature `generic_associated_types` is incomplete and may not be safe to use and/or cause compiler crashes
  --> $DIR/gat-trait-path-missing-lifetime.rs:1:12
   |
LL | #![feature(generic_associated_types)]
   |            ^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: `#[warn(incomplete_features)]` on by default
   = note: see issue #44265 <https://github.com/rust-lang/rust/issues/44265> for more information

error[E0107]: missing generics for associated type `X::Y`
  --> $DIR/gat-trait-path-missing-lifetime.rs:11:20
   |
LL |   fn foo<'a, T1: X<Y = T1>>(t : T1) -> T1::Y<'a> {
   |                    ^ expected 1 lifetime argument
   |
note: associated type defined here, with 1 lifetime parameter: `'a`
  --> $DIR/gat-trait-path-missing-lifetime.rs:5:8
   |
LL |   type Y<'a>;
   |        ^ --
help: add missing lifetime argument
   |
LL |   fn foo<'a, T1: X<Y<'a> = T1>>(t : T1) -> T1::Y<'a> {
   |                    ^^^^^

error[E0107]: missing generics for associated type `X::Y`
  --> $DIR/gat-trait-path-missing-lifetime.rs:11:20
   |
LL |   fn foo<'a, T1: X<Y = T1>>(t : T1) -> T1::Y<'a> {
   |                    ^ expected 1 lifetime argument
   |
note: associated type defined here, with 1 lifetime parameter: `'a`
  --> $DIR/gat-trait-path-missing-lifetime.rs:5:8
   |
LL |   type Y<'a>;
   |        ^ --
help: add missing lifetime argument
   |
LL |   fn foo<'a, T1: X<Y<'a> = T1>>(t : T1) -> T1::Y<'a> {
   |                    ^^^^^

error: aborting due to 2 previous errors; 1 warning emitted

For more information about this error, try `rustc --explain E0107`.
